--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <script defer src="app.js"></script>
   <title>Portfolio</title>
 </head>
 <body>
-  Hello, world!
+  <main class="home">
+    <nav class="navbar">
+      <div class="logo u-fontSize-h4 u-fontWeight-black u-fontAbrilFatface">JS;</div>
+      <div class="menu">
+        <div class="u-fontSize-p4" id="menu-portfolio"><a href="#">Portfolio</a></div>
+        <div class="u-fontSize-p4" id="menu-about"><a href="#">About</a></div>
+        <div class="u-fontSize-p4" id="menu-resume"><a href="#">Resume</a></div>
+        <div class="u-fontSize-p4" id="menu-Contact"><a href="#">Contact</a></div>
+      </div>
+    </nav>
+    <div class="welcome">
+      <h1>Hi, I am Jisoo</h1>
+      <p>UX/UI Designer / Front-end Engineer</p>
+      <button>Check out my work</button>
+    </div>
+  </main>
 </body>
 </html>
